# aker-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml
firmware/dts/riscv64/: qemu-virt.dts  test-memory-numa.dtsi
linker/: riscv64.ld
mk/: riscv64.mk
scripts/: qemu-runner.sh  setup.sh
src/: config.rs  main.rs  prelude.rs
src/arch/: mod.rs
src/arch/riscv64/: mod.rs
src/arch/riscv64/boot/: alloc.rs  boot.rs  dtb.rs  entry.S  entry_sv48.S  linker.rs  mod.rs  vm.rs
src/arch/riscv64/cpu/: cpu.rs  init.rs  (+2 more)
src/build_gen/: koffset.h  linker_const.h  linker_const.rs  mod.rs
src/cpu/: cpu.rs  cpumask.rs  mod.rs  numa.rs
src/kernel/: mod.rs
src/kernel/cpu/: cpu.rs  cpumask.rs  init.rs  mod.rs
src/kernel/dev/: dtb.rs  log.rs  mod.rs
src/kernel/sched/: cpu.rs  init.rs  mod.rs  sched.rs
src/kernel/vm/: level.rs  mod.rs  pagetable.rs  pte.rs
src/libs/: container_of.rs  endian.rs  error.rs  mod.rs  unsafe_static.rs
src/libs/dtb/: cpu.rs  dtb.rs  mem.rs  mod.rs  numa.rs  props.rs  raw.rs
src/libs/list/: mod.rs  queuelist.rs
src/mm/: addr.rs  align.rs  allocator.rs  arch.rs  bootmem.rs  mod.rs  numa.rs  page.rs  region.rs
src/mm/alloc/: bootmem.rs  buddy.rs  kallocator.rs  kbox.rs  mod.rs  numa_policy.rs  order.rs  page.rs  rust.rs
src/mm/allocator/: allocator.rs  flags.rs  mod.rs  numa_policy.rs
src/mm/vm/: config.rs  consts.rs  level.rs  map.rs  mod.rs  pagetable.rs  pte.rs
src/rust/: mod.rs  panic.rs
src/tests/: mod.rs  table.rs  test_runner.rs
(+33 files in other folders)
