[package]
name = "aker-rs"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = true 
codegen-units = 1

[dependencies]
bitflags = {version = "2.10.0"}

[target.'riscv64gc-unknown-none-elf'.dependencies]
fdt = { version = "0.1.5", default-features = false }

# Here, `features` is currently included for testing convenience,
# but may be moved to a separate configuration file in the future.
[features]
default = ["sv48"]
sv39 = []
sv48 = []

[build-dependencies]
regex = "1"
cc = "1.0"
